...
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/sdk_issue_date_hint"
        android:tag="@string/sdk_issue_date_hint"
        android:theme="@style/TextLabelHint">

        <vn.com.zalopay.wallet.view.custom.VPaymentValidDateEditText
            android:id="@+id/edittext_issue_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_bottom_default_style"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="number"
            android:maxLength="@integer/maximum_character_field_visa_valid_date"
...
